--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
         </main>
 
     </div>
-    
+    <footer>
+        Feito com 
+        <img src="/assets/Vector.svg" alt="Coração">
+        pela Rockeatseat
+    </footer>
 </body>
 </html>
 
