--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <footer>
         Feito com 
-        <img src="/assets/Vector.svg" alt="Coração">
+        <img src="./assets/Vector.svg" alt="Coração">
         pela Rockeatseat
     </footer>
 </body>
